# ChangeLog for net-nntp/tin
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-nntp/tin/ChangeLog,v 1.7 2006/05/02 23:27:08 swegener Exp $

  02 May 2006; Sven Wegener <swegener@gentoo.org> -tin-1.7.7-r1.ebuild,
  tin-1.7.8.ebuild:
  Disable X support, it needs more work.

*tin-1.7.8 (16 May 2005)

  16 May 2005; Sven Wegener <swegener@gentoo.org> -tin-1.6.0.ebuild,
  tin-1.6.2.ebuild, tin-1.7.7-r1.ebuild, +tin-1.7.8.ebuild:
  Version bump. Switched from .tar.gz to .tar.bz2. Use functions from
  versionator.eclass for SRC_URI generation.

  01 Apr 2005; Aron Griffis <agriffis@gentoo.org> tin-1.6.2.ebuild:
  stable on ia64

*tin-1.7.7-r1 (20 Feb 2005)

  20 Feb 2005; Aron Griffis <agriffis@gentoo.org>
  +files/tin-1.7.7-mbox-mmdf.patch, +tin-1.7.7-r1.ebuild, -tin-1.7.7.ebuild:
  Don't install mbox.5 or mmdf.5 to avoid conflict with mutt #82647

*tin-1.7.7 (17 Feb 2005)

  17 Feb 2005; Sven Wegener <swegener@gentoo.org> +tin-1.7.7.ebuild:
  Version bump.

*tin-1.6.0 (17 Jan 2005)

  17 Jan 2005; Sven Wegener <swegener@gentoo.org> +metadata.xml,
  +tin-1.6.0.ebuild, +tin-1.6.2.ebuild:
  Moved from net-news/tin to net-nntp/tin.

  06 Jan 2005; Kito <kito@gentoo.org> tin-1.6.2.ebuild:
  KEYWORD ~ppc-macos

  24 Sep 2004; Sven Wegener <swegener@gentoo.org> -tin-1.4.5.ebuild:
  Removed old ebuilds.

  10 Jul 2004; Sven Wegener <swegener@gentoo.org> tin-1.6.2.ebuild:
  Marked stable on x86.

  08 Jul 2004; Sven Wegener <swegener@gentoo.org> tin-1.4.5.ebuild,
  tin-1.6.0.ebuild:
  Made repoman happy, removed unnecessary comments in header.

  19 Jun 2004; Sven Wegener <swegener@gentoo.org> tin-1.4.5.ebuild,
  tin-1.6.0.ebuild:
  Removed S=${WORKDIR}/${P}

  19 Jun 2004; Sven Wegener <swegener@gentoo.org> +metadata.xml:
  Added metadata.xml

  23 Apr 2004; Ferris McCormick <fmccor@gentoo.org> tin-1.6.2.ebuild:
  Add ~sparc keyword at user request and my testing.
