@@ -1,1 +1,3 @@
 MD5 3ab61ba7c7d3b7a3596ba199c570c4e4 tin-1.6.2.tar.bz2 1186877
+RMD160 28a91ebe0c6064f76e0d81494ee3b8a28c15a4ab tin-1.6.2.tar.bz2 1186877
+SHA256 0ddb8d22cf72d0363655fc118bcb6f282d0d334231a4bbf5aa43ea0d75941103 tin-1.6.2.tar.bz2 1186877
